<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ColorPrimaryDark"
        android:text="@string/bill_details_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_size"
        android:gravity="center"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/table_borders"
        android:padding="@dimen/textview_padding" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/date"
                android:layout_width="@dimen/weight_width"
                android:layout_weight="1"
                android:background="@drawable/table_borders"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/date" />

            <TextView
                android:id="@+id/date_data"
                android:layout_width="@dimen/weight_width"
                android:layout_weight="1"
                android:background="@drawable/table_borders"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/date_data" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="@dimen/weight_width"
                android:layout_weight="1"
                android:background="@drawable/table_borders"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/order_no" />

            <TextView
                android:layout_width="@dimen/weight_width"
                android:layout_weight="1"
                android:background="@drawable/table_borders"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/order_no_data" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="@dimen/weight_width"
                android:layout_weight="1"
                android:background="@drawable/table_borders"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/buyers_name" />

            <TextView
                android:layout_width="@dimen/weight_width"
                android:layout_weight="1"
                android:background="@drawable/table_borders"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/buyers_name_data" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="@dimen/weight_width"
                android:layout_weight="1"
                android:background="@drawable/table_borders"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/buyers_address" />

            <TextView
                android:layout_width="@dimen/weight_width"
                android:layout_weight="1"
                android:background="@drawable/table_borders"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/buyers_address_data" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="@dimen/weight_width"
                android:layout_weight="1"
                android:background="@drawable/table_borders"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/contact_no" />

            <TextView
                android:layout_width="@dimen/weight_width"
                android:layout_weight="1"
                android:background="@drawable/table_borders"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/contact_no_data" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="@dimen/weight_width"
                android:layout_weight="1"
                android:background="@drawable/table_borders"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/total_amount" />

            <TextView
                android:layout_width="@dimen/weight_width"
                android:layout_weight="1"
                android:background="@drawable/table_borders"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/total_amount_data" />
        </TableRow>

    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/checkbox_text"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_gravity="center"
        android:src="@android:color/transparent" />
    <Button
        android:id="@+id/getSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:padding="@dimen/button_padding"
        android:layout_gravity="center_horizontal|bottom"
        android:textColor="@android:color/white"
        android:text="@string/get_signature_text" />

</LinearLayout>